--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
 		"grunt-contrib-concat": "~0.3.0",
 		"grunt-contrib-uglify": "~0.2.2",
 		"grunt-contrib-watch": "~0.4.4"
+	},
+	"repository" : {
+		"type" : "git",
+		"url" : "https://github.com/thomasdigby/Hand"
 	}
 }
